feat(fiscal): integração completa full-stack do módulo de notas fiscais
Frontend:
- Criação da UI  com design tokens Dark Mode idênticos ao dashboard.
- Implementação de chamadas API seguras () para evitar quebra de JSON no frontend.
- Tratamento avançado de downloads de XML/PDF via Blob para evitar iframes de erro (501 Not Implemented).
- Filtros dinâmicos em tempo real e paginação conectada ao Spring Data.
- Fluxos completos de emissão, cancelamento, upload de certificado A1 e consulta de CNPJ.

Backend:
- Implementação do  expondo o ciclo de vida completo da nota.
- Criação do serviço  com arquitetura de fallback (ReceitaWS, BrasilAPI, CNPJ.ws, CNPJa, OpenCNPJ).
- Resolução do erro de autowire com criação do .
- Correção de timezone no  e ajuste de queries paginadas no Repository.
- Refatoração total para DTOs (FilterNotaFiscalDTO, CriarNotaRequest) e tratamento com ApiException.

Closes #modulo-fiscal